# CICD_practice

./: CMakeLists.txt  lib.cpp  main.cpp  test_version.cpp
.github/workflows/: release.yml
